Fix native library path