@@ -170,14 +170,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.1</version>
                 <configuration>
-
                     <useSystemClassLoader>false</useSystemClassLoader>
-
-                    <argLine>@{argLine} -Xmx750M -XX:+UseG1GC -XX:MaxGCPauseMillis=100
-                        -Djava.library.path=${project.basedir}/../Ant-Media-Server/src/main/server/lib/native
-                    </argLine>
+                    <argLine>--illegal-access=permit -Xmx750M -XX:+UseG1GC -XX:MaxGCPauseMillis=100 -Djava.library.path=${project.basedir}/src/main/server/lib/native</argLine>
                 </configuration>
             </plugin>
             <plugin>
